stable/application-mesh/tests/golden/components/destination-rule.values.yaml
global:
  application:
    product: leads-broker
    environment: test
    version: "0.0.0"

destinations:
  - component: backend
