stable/application-mesh/tests/golden/components/destination-rule.golden.yaml
---
# Source: application-mesh/templates/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: leads-broker-backend
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.0.0"
spec:
  host: leads-broker-backend.app-component-test00000.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 200
        connectTimeout: 5s
      http:
        http1MaxPendingRequests: 1024
        maxRequestsPerConnection: 1000
        idleTimeout: 60s
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
    loadBalancer:
      simple: LEAST_REQUEST
  subsets:
    - name: all-versions # Route traffic to all pods regardless of the deployed version. Current deployment model.
      labels:
        app.kubernetes.io/instance: leads-broker-backend
    - name: current-version # Should be used for proper blue-green deployment procedures
      labels:
        app.kubernetes.io/instance: leads-broker-backend
        app.kubernetes.io/version: "0.0.0"
