stable/application-mesh/tests/golden/components/egress.values.yaml
global:
  application:
    product: leads-broker
    environment: test
    version: "0.0.0"

egress:
  enabled: true
  allowlist:

  - name: db
    type: postgres
    host: lead-broker-staging.aws.db

  - name: redis
    type: redis
    host: lead-broker-staging.aws.redis

  - name: some-external-website
    type: https
    hosts:
      - api.lob.com
      - auth.lob.com

  - full_name: kafka
    type: kafka
    host: kafka.server.com
    port: 9001
