stable/application-mesh/tests/golden/components/envoy-filter-max-body-size.values.yaml
global:
  application:
    product: leads-broker
    environment: test
    version: "0.0.0"

destinations:
  - component: webserver
    settings:
      max_request_bytes: "65000000"
  - component: websocket
    settings:
      max_request_bytes: "67000000"

ingress:
  - host: best-product.example.com
    gateway: external-example-com
    destination: webserver

  - host: best-product-ws.example.com
    gateway: external-example-com
    destination: websocket
