stable/application-mesh/tests/golden/components/envoy-filter-max-body-size.golden.yaml
---
# Source: application-mesh/templates/envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: leads-broker-webserver
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/instance: leads-broker-webserver
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.buffer
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
          max_request_bytes: 67108864
