stable/application-mesh/tests/golden/components/external-gateway.values.yaml
global:
  application:
    product: best-product
    environment: test
    version: "0.0.0"

destinations:
  - component: webserver

ingress:
  - host: best-product-st1.example.com
    gateway: external
    destination: webserver

  - host: best-product-st1-tls.example.com
    gateway: external
    destination: webserver
    min_protocol_version: TLSV1_1
    cipher_list: ["ECDHE-RSA-AES128-SHA", "ECDHE-RSA-AES256-SHA", "AES128-SHA", "AES256-SHA"]

  - host: best-product-st1.example.link
    gateway: internal
    destination: webserver
