stable/application-mesh/tests/golden/components/external-gateway.golden.yaml
---
# Source: application-mesh/templates/certificate.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: leads-broker-st1-matic-com
  namespace: istio-ingress
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.0.0"
spec:
  dnsNames:
    - "leads-broker-st1.matic.com"
  issuerRef:
    name: letsencrypt-production
    kind: ClusterIssuer
  secretName: leads-broker-st1-matic-com-tls
---
# Source: application-mesh/templates/certificate.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: leads-broker-st1-tls-matic-com
  namespace: istio-ingress
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.0.0"
spec:
  dnsNames:
    - "leads-broker-st1-tls.matic.com"
  issuerRef:
    name: letsencrypt-production
    kind: ClusterIssuer
  secretName: leads-broker-st1-tls-matic-com-tls
---
# Source: application-mesh/templates/certificate.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: leads-broker-st1-matic-link
  namespace: istio-ingress
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.0.0"
spec:
  dnsNames:
    - "leads-broker-st1.matic.link"
  issuerRef:
    name: letsencrypt-production
    kind: ClusterIssuer
  secretName: leads-broker-st1-matic-link-tls
---
# Source: application-mesh/templates/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: leads-broker-st1-matic-com
  annotations:
    # Do not create dns records for this resource
    external-dns.alpha.kubernetes.io/controller: "ignored-resource"
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.0.0"
spec:
  selector:
    istio: ingress-public-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "leads-broker-st1.matic.com"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "leads-broker-st1.matic.com"
      tls:
        mode: SIMPLE
        credentialName: istio-ingress/leads-broker-st1-matic-com-tls
---
# Source: application-mesh/templates/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: leads-broker-st1-tls-matic-com
  annotations:
    # Do not create dns records for this resource
    external-dns.alpha.kubernetes.io/controller: "ignored-resource"
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.0.0"
spec:
  selector:
    istio: ingress-public-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "leads-broker-st1-tls.matic.com"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "leads-broker-st1-tls.matic.com"
      tls:
        mode: SIMPLE
        credentialName: istio-ingress/leads-broker-st1-tls-matic-com-tls
        minProtocolVersion: TLSV1_1
        cipherSuites:
          - ECDHE-RSA-AES128-SHA
          - ECDHE-RSA-AES256-SHA
          - AES128-SHA
          - AES256-SHA
---
# Source: application-mesh/templates/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: leads-broker-st1-matic-link
  annotations:
    # Do not create dns records for this resource
    external-dns.alpha.kubernetes.io/controller: "ignored-resource"
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.0.0"
spec:
  selector:
    istio: ingress-private-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "leads-broker-st1.matic.link"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "leads-broker-st1.matic.link"
      tls:
        mode: SIMPLE
        credentialName: istio-ingress/leads-broker-st1-matic-link-tls
