stable/application-mesh/tests/golden/components/ingress-allow-locations.golden.gateway.yaml
---
# Source: application-mesh/templates/virtual-service.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leads-broker-6670087e
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "broker-hooks-st1.matic.com, zendesk-st1.matic.com, amp-hooks-st1.matic.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  hosts:
    - "broker-hooks-st1.matic.com"
    - "zendesk-st1.matic.com"
    - "amp-hooks-st1.matic.com"
  gateways:
    - istio-ingress/external-matic-com
  http:
    - name: allow-ingress-spec
      match:
        - uri:
            prefix: /api/hooks
        - uri:
            prefix: /api/zendesk
        - uri:
            prefix: /api/status
      route:
        - destination:
            host: "leads-broker-backend.app-component-test00000.svc.cluster.local"
            subset: all-versions
          
    - name: deny-everything-except-allowed
      directResponse:
        status: 403
        body:
          string: Access Denied
