stable/application-mesh/tests/golden/components/ingress-allow-locations.golden.mesh.yaml
---
# Source: application-mesh/templates/virtual-service.mesh.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leads-broker-backend
spec:
  hosts:
    - "leads-broker-backend.app-component-test00000.svc.cluster.local"
  gateways:
    - mesh
  http:
    - name: allow-all-locations
      route:
        - destination:
            host: "leads-broker-backend.app-component-test00000.svc.cluster.local"
            subset: all-versions
