stable/application-mesh/tests/golden/components/ingress-allow-locations.values.yaml
global:
  application:
    product: best-product
    environment: test
    version: "0.0.0"

destinations:
  - component: backend

ingress:
  - host: abc-hooks-st1.example.com
    additional_hosts:
      - best-hooks-st1.example.com
      - product-st1.example.com
    gateway: external-example-com
    destination: backend
    allow_locations:
      - /api/hooks
      - /api/status
