stable/application-mesh/tests/golden/components/ingress-deny-and-allow.values.yaml
global:
  application:
    product: best-product
    environment: test
    version: "0.0.0"

destinations:
  - component: webserver

ingress:
  - host: best-product-st1.example.com
    gateway: external-example-com
    destination: webserver
    deny_locations:
      - /admin
    allow_locations:
      - /api
      - /public
