stable/application-mesh/tests/golden/components/ingress-deny-and-allow.golden.yaml
---
# Source: application-mesh/templates/virtual-service.mesh.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-webserver
  labels:
    app.kubernetes.io/part-of: best-product
    app.kubernetes.io/version: "0.0.0"
spec:
  hosts:
    - "best-product-webserver.app-component-test00000.svc.cluster.local"
  gateways:
    - mesh
  http:
    - name: allow-all-locations
      route:
        - destination:
            host: "best-product-webserver.app-component-test00000.svc.cluster.local"
            subset: all-versions
---
# Source: application-mesh/templates/virtual-service.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-9bf40aa9
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "best-product-st1.example.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/part-of: best-product
    app.kubernetes.io/version: "0.0.0"
spec:
  hosts:
    - "best-product-st1.example.com"
  gateways:
    - istio-ingress/external-example-com
  http:
    - name: deny-ingress-spec
      match:
        - uri:
            prefix: /admin
      directResponse:
        status: 403
        body:
          string: Access Denied
    - name: allow-ingress-spec
      match:
        - uri:
            prefix: /api
        - uri:
            prefix: /public
      route:
        - destination:
            host: "best-product-webserver.app-component-test00000.svc.cluster.local"
            subset: all-versions
          
    - name: deny-everything-except-allowed
      directResponse:
        status: 403
        body:
          string: Access Denied
