stable/application-mesh/tests/golden/components/ingress-deny-locations.values.yaml
global:
  application:
    product: best-product
    environment: test
    version: "0.0.0"

destinations:
  - component: websockets

ingress:
  - host: ws-abc.example.link
    gateway: private-example-link
    destination: websockets
    deny_locations:
      - /api
      - /upload
