stable/application-mesh/tests/golden/components/ingress-deny-locations.golden.yaml
---
# Source: application-mesh/templates/virtual-service.mesh.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-websockets
  labels:
    app.kubernetes.io/part-of: best-product
    app.kubernetes.io/version: "0.0.0"
spec:
  hosts:
    - "best-product-websockets.app-component-test00000.svc.cluster.local"
  gateways:
    - mesh
  http:
    - name: allow-all-locations
      route:
        - destination:
            host: "best-product-websockets.app-component-test00000.svc.cluster.local"
            subset: all-versions
---
# Source: application-mesh/templates/virtual-service.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-46f60734
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "ws-abc.example.link"
    external-dns.alpha.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/part-of: best-product
    app.kubernetes.io/version: "0.0.0"
spec:
  hosts:
    - "ws-abc.example.link"
  gateways:
    - istio-ingress/private-example-link
  http:
    - name: deny-ingress-spec
      match:
        - uri:
            prefix: /api
        - uri:
            prefix: /upload
      directResponse:
        status: 403
        body:
          string: Access Denied
    - name: allow-all-locations
      route:
        - destination:
            host: "best-product-websockets.app-component-test00000.svc.cluster.local"
            subset: all-versions
