stable/application-mesh/tests/golden/components/redirects.values.yaml
global:
  application:
    product: best-product
    environment: test
    version: "0.0.0"

destinations:
  - component: webserver

redirects:

  # redirect all URIs with default code 301
  - source: best-product-st1-src.example.com
    destination: best-product-st1-dsc.example.com

  # redirect all URIs with code 302
  - source: best-product-st1-src-2.example.com
    destination: best-product-st1-dsc-2.example.com
    redirectCode: 302

  # custom URI test 1
  - source: best-product-st1-src.example.com
    source_uri: /uri-on-src
    destination: best-product-st1-dsc.example.com
    destination_uri: /uri-on-dst

  # custom URI test 2
  - source: best-product-st1-src.example.com
    source_uri: /2nd-uri-on-src
    destination: best-product-st1-dsc.example.com
    destination_uri: /2nd-uri-on-dst

  # custom URI test 3
  - source: best-product-st1-src-3.example.com
    source_uri: /uri-on-src
    destination: best-product-st1-dsc-3.example.com
    destination_uri: /uri-on-dst

ingress:
  - host: best-product-st1.example.com
    gateway: external
    destination: webserver

  - host: best-product-st1.matic.link
    gateway: internal
    destination: webserver
