stable/application-mesh/tests/golden/components/redirects.golden.yaml
---
# Source: application-mesh/templates/redirects.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: best-product-st1-src-2-example-com-redirects
  namespace: istio-ingress
spec:
  dnsNames:
    - best-product-st1-src-2.example.com
  issuerRef:
    name: letsencrypt-production
    kind: ClusterIssuer
  secretName: best-product-st1-src-2-example-com-tls
---
# Source: application-mesh/templates/redirects.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: best-product-st1-src-3-example-com-redirects
  namespace: istio-ingress
spec:
  dnsNames:
    - best-product-st1-src-3.example.com
  issuerRef:
    name: letsencrypt-production
    kind: ClusterIssuer
  secretName: best-product-st1-src-3-example-com-tls
---
# Source: application-mesh/templates/redirects.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: best-product-st1-src-example-com-redirects
  namespace: istio-ingress
spec:
  dnsNames:
    - best-product-st1-src.example.com
  issuerRef:
    name: letsencrypt-production
    kind: ClusterIssuer
  secretName: best-product-st1-src-example-com-tls
---
# Source: application-mesh/templates/redirects.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: best-product-st1-src-2-example-com-redirects
  annotations:
    # Do not create dns records for this resource
    external-dns.alpha.kubernetes.io/controller: "ignored-resource"
spec:
  selector:
    istio: ingress-public-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - best-product-st1-src-2.example.com
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - best-product-st1-src-2.example.com
      tls:
        mode: SIMPLE
        credentialName: istio-ingress/best-product-st1-src-2-example-com-tls
---
# Source: application-mesh/templates/redirects.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: best-product-st1-src-3-example-com-redirects
  annotations:
    # Do not create dns records for this resource
    external-dns.alpha.kubernetes.io/controller: "ignored-resource"
spec:
  selector:
    istio: ingress-public-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - best-product-st1-src-3.example.com
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - best-product-st1-src-3.example.com
      tls:
        mode: SIMPLE
        credentialName: istio-ingress/best-product-st1-src-3-example-com-tls
---
# Source: application-mesh/templates/redirects.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: best-product-st1-src-example-com-redirects
  annotations:
    # Do not create dns records for this resource
    external-dns.alpha.kubernetes.io/controller: "ignored-resource"
spec:
  selector:
    istio: ingress-public-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - best-product-st1-src.example.com
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - best-product-st1-src.example.com
      tls:
        mode: SIMPLE
        credentialName: istio-ingress/best-product-st1-src-example-com-tls
---
# Source: application-mesh/templates/redirects.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-d58a0c3e-redirects
spec:
  hosts:
    - best-product-st1-src.example.com
  gateways:
    - app-component-test00000/best-product-st1-src-example-com-redirects
  http:
    - match:
        - uri:
            prefix: /
      redirect:
        authority: best-product-st1-dsc.example.com
        redirectCode: 301
---
# Source: application-mesh/templates/redirects.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-ea170c9d-redirects
spec:
  hosts:
    - best-product-st1-src-2.example.com
  gateways:
    - app-component-test00000/best-product-st1-src-2-example-com-redirects
  http:
    - match:
        - uri:
            prefix: /
      redirect:
        authority: best-product-st1-dsc-2.example.com
        redirectCode: 302
---
# Source: application-mesh/templates/redirects.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-8131105c-redirects
spec:
  hosts:
    - best-product-st1-src.example.com
  gateways:
    - app-component-test00000/best-product-st1-src-example-com-redirects
  http:
    - match:
        - uri:
            prefix: /uri-on-src
      redirect:
        authority: best-product-st1-dsc.example.com
        uri: /uri-on-dst
        redirectCode: 301
---
# Source: application-mesh/templates/redirects.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-c256118d-redirects
spec:
  hosts:
    - best-product-st1-src.example.com
  gateways:
    - app-component-test00000/best-product-st1-src-example-com-redirects
  http:
    - match:
        - uri:
            prefix: /2nd-uri-on-src
      redirect:
        authority: best-product-st1-dsc.example.com
        uri: /2nd-uri-on-dst
        redirectCode: 301
---
# Source: application-mesh/templates/redirects.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-9a4c10bc-redirects
spec:
  hosts:
    - best-product-st1-src-3.example.com
  gateways:
    - app-component-test00000/best-product-st1-src-3-example-com-redirects
  http:
    - match:
        - uri:
            prefix: /uri-on-src
      redirect:
        authority: best-product-st1-dsc-3.example.com
        uri: /uri-on-dst
        redirectCode: 301
