stable/application-mesh/tests/golden/components/service-entry.golden.yaml
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: leads-broker-db
spec:
  hosts:
    - lead-broker-staging.aws.db
  ports:
    - name: postgres
      number: 5432
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: leads-broker-redis
spec:
  hosts:
    - lead-broker-staging.aws.redis
  ports:
    - name: redis
      number: 6379
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: leads-broker-some-external-website
spec:
  hosts:
    - api.lob.com
    - auth.lob.com
  ports:
    - name: https
      number: 443
      protocol: TLS
  location: MESH_EXTERNAL
  resolution: DNS
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: kafka
spec:
  hosts:
    - kafka.server.com
  ports:
    - name: kafka
      number: 9001
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
