stable/application-mesh/tests/golden/components/sticky-session-cookie.values.yaml
global:
  application:
    product: leads-broker
    environment: test
    version: "0.0.0"

destinations:
  - component: webserver
    stickySession:
      enabled: true
      type: httpCookie
      httpCookie:
        name: my-app-session
        ttl: 7200s
