stable/application-mesh/tests/golden/components/sticky-session-header.values.yaml
global:
  application:
    product: leads-broker
    environment: test
    version: "0.0.0"

destinations:
  - component: webserver
    stickySession:
      enabled: true
      type: httpHeaderName
      httpHeaderName: x-session-id
