stable/application-mesh/tests/golden/components/sticky-session-source-ip.values.yaml
global:
  application:
    product: leads-broker
    environment: test
    version: "0.0.0"

destinations:
  - component: webserver
    stickySession:
      enabled: true
      type: sourceIp
