stable/application-mesh/tests/golden/components/virtual-service.golden.yaml
---
# Source: application-mesh/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leads-broker-backend
spec:
  hosts:
    - leads-broker-backend.app-component-test00000.svc.cluster.local
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: leads-broker-backend.app-component-test00000.svc.cluster.local
            subset: default
---
# Source: application-mesh/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leads-broker-2455050f
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "myhost1.local"
spec:
  hosts:
    - myhost1.local
  gateways:
    - istio-ingress/external
  http:
    - route:
        name: deny-ingress-spec
        match:
          - uri:
              prefix: /admin
          - uri:
              prefix: /internal_api
          - uri:
              prefix: /etc
        directResponse:
          status: 403
          body:
            string: Access Denied
    - route:
        name: allow-ingress-spec
        match:
          - uri:
              prefix: /api
          - uri:
              prefix: /upload
        destination:
          host: leads-broker-webserver.app-component-test00000.svc.cluster.local
          subset: default
    - route:
        name: deny-everything-except-allowed
        directResponse:
          status: 403
          body:
            string: Access Denied
